--- a/web/index.html
+++ b/web/index.html
@@ -253,7 +253,7 @@
 
 <script type="module">
   import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
-  const supabase = createClient('https://fcsnwmzrpwsabsqnscwj.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZjc253bXpycHdzYWJzcW5zY3dqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDY1MTUwNDUsImV4cCI6MjA2MjA5MTA0NX0.QKBmiZGCbP79v75XE4VTG0TDmGZV-iC2vE0gOzLMeH0');
+  const supabase = createClient('https://oowrwdvurkxroubwrylv.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9vd3J3ZHZ1cmt4cm91YndyeWx2Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTI1NTI1MTEsImV4cCI6MjA2ODEyODUxMX0.MEz3Su0W5YWLSFb6Kvz41_yrOk0ojEvF5jYHM5vcDY0');
 
   let currentLoginType = '', selectedUKM = null;
   let currentUserEmail = null;
